Fixed spacing between zip code and get started button (homepage)

--- a/htdocs/content/themes/ncoa/assets/scss/components/_white-label.scss
+++ b/htdocs/content/themes/ncoa/assets/scss/components/_white-label.scss
@@ -199,10 +199,15 @@
     @media screen and (min-width: 768px) {
       max-width: none;
     }
+    @media screen and (max-width: 767px) {
+      button {
+        width: 100%;
+      }
+    }
 
     .form-control {
       margin-right: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
 
       @media screen and (min-width: 768px) {
         margin-bottom: 0;
